--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,15 @@
     "require": {
         "php": ">=7.0.0",
         "laravel/framework": "5.5.*",
-        "laravelcollective/html": "^5.4.0",
+        "laravelcollective/html": "^5.5.0",
         "lord/laroute" : "2.*",
-        "yajra/laravel-datatables-oracle": "^6.8",
-        "zizaco/entrust": "5.2.x-dev"
+        "zizaco/entrust": "5.2.x-dev",
+        "yajra/laravel-datatables-oracle": "~8.0",
+        "dompdf/dompdf": "^0.8.2",
+        "barryvdh/laravel-dompdf": "^0.8.2",
+        "maatwebsite/excel": "~2.1.0",
+        "laravel/tinker": "^1.0",
+        "fideloper/proxy": "^4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
