--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "jquery-ui": "~1.11.4",
     "jquery.inputmask": "~3.3.1",
     "underscore": "~1.8.3",
-    "chart.js": "^2.7.2"
+    "chart.js": "^2.7.2",
+    "font-awesome": "fontawesome#~4.7.0"
   }
 }
