--- a/package.json
+++ b/package.json
@@ -18,7 +18,5 @@
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
     },
-    "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.2.0"
-    }
+    "dependencies": {}
 }
